# fastapi-minimal-starter

./: alembic.ini  pyproject.toml
app/api/: main.py
app/core/: config.py
app/migrations/: env.py
